# ecs

./: .clang-format  .gitignore  ComponentPool.h  ECS.h  ECS2.h  ECS3.h  ECS_complete.h  ECS_final.h  ECS_new.h  ECS_new_charpools.h  ECS_old.h  ECS_old_rework.h  ECS_old_rework_refresh.h  LICENSE  README.md  ecs.sln  ecs.vcxproj  main.cpp
include/ecs/: ecs.h  updated_ecs.h
tests/: CMakeLists.txt  ComponentBasics.h  EntityBasics.h  ManagerBasics.h  ManagerConstructors.h  OldTests.h  PoolTests.h  SpeedTests.h  Timer.h  common.h  hooks.h  main.cpp  profile.h  run_tests.cpp  sparse_dense.h  test.h  test_ecs.h  views.h
